# book_reader_rag

./: Cargo.toml
src/: arxiv.rs  chunk.rs  embedder.rs  lib.rs  llm.rs  main.rs  pdf.rs  retrieve.rs  vector_store.rs
