[package]
name = "book_reader_rag"
version = "1.0.0"
description = "Book Reader RAG"
authors = ["Timur Uzakov <timauzakov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "book_reader_rag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.7"
qdrant-client = "1.7"
quick-xml = "0.31"
once_cell = "1.18"
# Markdown
pulldown-cmark = "0.10"
tower-http = { version = "0.5", features = ["cors"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
